# pi_robot1

robot_bringup/: package.xml  setup.py
robot_bringup/artifacts/bag_plots/: rosout_messages.txt
robot_bringup/bags/: plot_bag.py
robot_bringup/bags/robot_run/: metadata.yaml  robot_run_0.mcap
robot_bringup/config/: ekf.yaml  robot.urdf
robot_bringup/docs/: DataLogger_setup.md  PathFollowingTestSetup.md  Repo_Structure.md  RobotLauncher_setup.md  robot_setup.md  troubleshooting.md
robot_bringup/launch/: robot_bringup.launch.py
robot_bringup/robot_bringup/: mpu6050_node.py  serial_bridge_node.py
robot_bringup/tests/: path_follower_node.py
